// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unfoldMeasures > 1 dimensions, 0 measures 1`] = `
[
  {
    "date": "2019",
  },
  {
    "date": "2020",
  },
  {
    "date": "2021",
  },
  {
    "date": "2022",
  },
  {
    "date": "2023",
  },
]
`;

exports[`unfoldMeasures > 1 dimensions, 1 measures 1`] = `
[
  {
    "__DimGroup__": "2019",
    "date": "2019",
    "sales": 100,
  },
  {
    "__DimGroup__": "2020",
    "date": "2020",
    "sales": 3200,
  },
  {
    "__DimGroup__": "2021",
    "date": "2021",
    "sales": 300,
  },
  {
    "__DimGroup__": "2022",
    "date": "2022",
    "sales": 2400,
  },
  {
    "__DimGroup__": "2023",
    "date": "2023",
    "sales": 500,
  },
]
`;

exports[`unfoldMeasures > 1 dimensions, 5 measures 1`] = `
[
  {
    "__DimGroup__": "2019",
    "count": 10,
    "date": "2019",
    "number": 10,
    "price": 50,
    "profit": 10,
    "sales": 100,
  },
  {
    "__DimGroup__": "2020",
    "count": 20,
    "date": "2020",
    "number": 20,
    "price": 100,
    "profit": 20,
    "sales": 3200,
  },
  {
    "__DimGroup__": "2021",
    "count": 30,
    "date": "2021",
    "number": 30,
    "price": 100,
    "profit": 30,
    "sales": 300,
  },
  {
    "__DimGroup__": "2022",
    "count": 40,
    "date": "2022",
    "number": 40,
    "price": 100,
    "profit": 40,
    "sales": 2400,
  },
  {
    "__DimGroup__": "2023",
    "count": 50,
    "date": "2023",
    "number": 50,
    "price": 100,
    "profit": 50,
    "sales": 500,
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 0 measures 1`] = `
[
  {
    "date": "2019",
    "type": "A",
  },
  {
    "date": "2020",
    "type": "A",
  },
  {
    "date": "2021",
    "type": "A",
  },
  {
    "date": "2022",
    "type": "A",
  },
  {
    "date": "2023",
    "type": "A",
  },
  {
    "date": "2019",
    "type": "B",
  },
  {
    "date": "2020",
    "type": "B",
  },
  {
    "date": "2021",
    "type": "B",
  },
  {
    "date": "2022",
    "type": "B",
  },
  {
    "date": "2023",
    "type": "B",
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 0 measures 2`] = `
[
  {
    "date": "2019",
    "type": "A",
  },
  {
    "date": "2020",
    "type": "A",
  },
  {
    "date": "2021",
    "type": "A",
  },
  {
    "date": "2022",
    "type": "A",
  },
  {
    "date": "2023",
    "type": "A",
  },
  {
    "date": "2019",
    "type": "B",
  },
  {
    "date": "2020",
    "type": "B",
  },
  {
    "date": "2021",
    "type": "B",
  },
  {
    "date": "2022",
    "type": "B",
  },
  {
    "date": "2023",
    "type": "B",
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 1 measures 1`] = `
[
  {
    "__DimGroup__": "2019-A",
    "date": "2019",
    "sales": 100,
    "type": "A",
  },
  {
    "__DimGroup__": "2020-A",
    "date": "2020",
    "sales": 3200,
    "type": "A",
  },
  {
    "__DimGroup__": "2021-A",
    "date": "2021",
    "sales": 300,
    "type": "A",
  },
  {
    "__DimGroup__": "2022-A",
    "date": "2022",
    "sales": 2400,
    "type": "A",
  },
  {
    "__DimGroup__": "2023-A",
    "date": "2023",
    "sales": 500,
    "type": "A",
  },
  {
    "__DimGroup__": "2019-B",
    "date": "2019",
    "sales": 100,
    "type": "B",
  },
  {
    "__DimGroup__": "2020-B",
    "date": "2020",
    "sales": 3200,
    "type": "B",
  },
  {
    "__DimGroup__": "2021-B",
    "date": "2021",
    "sales": 300,
    "type": "B",
  },
  {
    "__DimGroup__": "2022-B",
    "date": "2022",
    "sales": 2400,
    "type": "B",
  },
  {
    "__DimGroup__": "2023-B",
    "date": "2023",
    "sales": 500,
    "type": "B",
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 1 measures 2`] = `
[
  {
    "__DimGroup__": "A",
    "date": "2019",
    "sales": 100,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2020",
    "sales": 3200,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2021",
    "sales": 300,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2022",
    "sales": 2400,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2023",
    "sales": 500,
    "type": "A",
  },
  {
    "__DimGroup__": "B",
    "date": "2019",
    "sales": 100,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2020",
    "sales": 3200,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2021",
    "sales": 300,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2022",
    "sales": 2400,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2023",
    "sales": 500,
    "type": "B",
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 2 measures 1`] = `
[
  {
    "__DimGroup__": "2019-A",
    "date": "2019",
    "profit": 10,
    "sales": 100,
    "type": "A",
  },
  {
    "__DimGroup__": "2020-A",
    "date": "2020",
    "profit": 30,
    "sales": 3200,
    "type": "A",
  },
  {
    "__DimGroup__": "2021-A",
    "date": "2021",
    "profit": 30,
    "sales": 300,
    "type": "A",
  },
  {
    "__DimGroup__": "2022-A",
    "date": "2022",
    "profit": 50,
    "sales": 2400,
    "type": "A",
  },
  {
    "__DimGroup__": "2023-A",
    "date": "2023",
    "profit": 40,
    "sales": 500,
    "type": "A",
  },
  {
    "__DimGroup__": "2019-B",
    "date": "2019",
    "profit": 10,
    "sales": 100,
    "type": "B",
  },
  {
    "__DimGroup__": "2020-B",
    "date": "2020",
    "profit": 30,
    "sales": 3200,
    "type": "B",
  },
  {
    "__DimGroup__": "2021-B",
    "date": "2021",
    "profit": 30,
    "sales": 300,
    "type": "B",
  },
  {
    "__DimGroup__": "2022-B",
    "date": "2022",
    "profit": 50,
    "sales": 2400,
    "type": "B",
  },
  {
    "__DimGroup__": "2023-B",
    "date": "2023",
    "profit": 40,
    "sales": 500,
    "type": "B",
  },
]
`;

exports[`unfoldMeasures > 2 dimensions, 2 measures 2`] = `
[
  {
    "__DimGroup__": "A",
    "date": "2019",
    "profit": 10,
    "sales": 100,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2020",
    "profit": 30,
    "sales": 3200,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2021",
    "profit": 30,
    "sales": 300,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2022",
    "profit": 50,
    "sales": 2400,
    "type": "A",
  },
  {
    "__DimGroup__": "A",
    "date": "2023",
    "profit": 40,
    "sales": 500,
    "type": "A",
  },
  {
    "__DimGroup__": "B",
    "date": "2019",
    "profit": 10,
    "sales": 100,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2020",
    "profit": 30,
    "sales": 3200,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2021",
    "profit": 30,
    "sales": 300,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2022",
    "profit": 50,
    "sales": 2400,
    "type": "B",
  },
  {
    "__DimGroup__": "B",
    "date": "2023",
    "profit": 40,
    "sales": 500,
    "type": "B",
  },
]
`;
